[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pkmn_alert"
version = "0.1.0"
description = "Free, GitHub-Actions-native alerting for Pokemon Center TCG drops."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx==0.27.2",
    "PyYAML==6.0.2",
    "feedparser==6.0.11",
    "python-dateutil==2.9.0.post0",
]

[project.optional-dependencies]
queueit = ["curl_cffi==0.7.4"]
dev = ["pytest==8.3.3", "ruff==0.6.9"]

[project.scripts]
pkmn-alert = "pkmn_alert.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    # feedparser 6.x emits this from its regex normalization on Python 3.13+;
    # not our bug and irrelevant to correctness.
    "ignore::DeprecationWarning:feedparser.*",
]

[tool.ruff]
line-length = 100
target-version = "py310"
